configure test reporst for kotlin moduels
* android modules - only app is configured, need a way to apply this conf for all android modules